--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             position: relative;
             height: 70vh;
             min-height: 480px;
-            background-image: url("silk-hero.jpng");
+            background-image: url("silk-hero.png");
             background-size: cover;
             background-position: center;
         }
